@@ -1,4 +1,5 @@
 2010-01-15  Christopher Bratusek <zanghar@freenet.de>
+	* lisp/sawfish/wm/autoload.jl
 	* lisp/sawfish/wm/commands/jump-or-exec.jl: added a modified version of jump-or-exec,
 	                                            which supports both matching against WM_NAME
 						    and WM_CLASS
